--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "build:prod": "node --stack_size=4048 node_modules/.bin/ng build --prod"
   },
   "private": true,
   "dependencies": {
@@ -20,7 +21,12 @@
     "@angular/platform-browser": "^6.0.3",
     "@angular/platform-browser-dynamic": "^6.0.3",
     "@angular/router": "^6.0.3",
+    "@ngrx/store": "^6.1.2",
+    "ag-grid-angular": "^19.1.2",
+    "ag-grid-community": "^19.1.3",
+    "ag-grid-enterprise": "^19.1.3",
     "core-js": "^2.5.4",
+    "lodash": "^4.17.11",
     "rxjs": "^6.0.0",
     "zone.js": "^0.8.26"
   },
